Added list to body

--- a/index.html
+++ b/index.html
@@ -14,5 +14,11 @@
             a illum ullam reiciendis, voluptatum 
             labore reprehenderit quod numquam 
             corrupti expedita mollitia nisi et?</p>
+
+        <ul>
+            <li>Carrots</li>
+            <li>Potatoes</li>
+            <li>Onions</li>
+        </ul>
     </body>
 </html>
