Added multiple lists, ordered and unordered

--- a/index.html
+++ b/index.html
@@ -15,10 +15,32 @@
             labore reprehenderit quod numquam 
             corrupti expedita mollitia nisi et?</p>
 
+        <h1>Grocery list!</h1>
         <ul>
             <li>Carrots</li>
             <li>Potatoes</li>
             <li>Onions</li>
         </ul>
+        <h1>Daily chores zzz</h1>
+        <ol>
+            <li>Feed dogs</li>
+            <li>Feed cat</li>
+            <li>Scoop litterbox</li>
+        </ol>
+        <h1>Places I'd like to visit</h1>
+        <ul>
+            <li>Japan</li>
+            <li>Switzerland</li>
+            <li>Russia</li>
+        </ul>
+        <h1>Top 5 Media</h1>
+        <h4><em>"100% objective"</em></h4>
+        <ol>
+            <li>Berserk</li>
+            <li>Legend of Zelda: Majora's Mask</li>
+            <li>Vinland Saga</li>
+            <li>Hunter x Hunter</li>
+            <li>Tingle's Balloon World</li>
+        </ol>
     </body>
 </html>
